@@ -259,7 +259,7 @@ our $altv = "PriceIsRightTheme.mp3";
 
 #####
 
-my $version = "2.2";    # Program version
+my $version = "2.2.1";    # Program version
 $version .= "CWX";
 our $status = "Welcome to Mr. Voice version $version";
 
@@ -4178,7 +4178,6 @@ sub validate_id
 
 sub stop_mp3
 {
-    startcheck_player();
     print "Stopping MP3\n" if $debug;
 
     my $widget = shift;
@@ -4196,16 +4195,10 @@ sub stop_mp3
         system("$config{mp3player} --stop");
     }
     $status = "Playing Stopped";
-
-    # Manually give the mainbox focus
-    print "Focusing on mainbox\n" if $debug;
-    $mainbox->focus();
 }
 
 sub play_mp3
 {
-
-    startcheck_player();
     print "Playing MP3\n" if $debug;
     my ( $statustitle, $statusartist, $filename );
     my $songstatusstring;
